@@ -14,57 +14,78 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
-    
+
     @Value("${aws.cognito.userPoolId}")
     private String userPoolId;
-    
+
     @Value("${aws.cognito.region}")
     private String region;
-    
+
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            // Deshabilitar CSRF completamente para API REST
             .csrf(csrf -> csrf.disable())
+            
+            // Permitir frames para H2 Console
+            .headers(headers -> headers
+                .frameOptions(frame -> frame.sameOrigin())
+            )
+            
+            // Configurar CORS
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            
+            // Configurar autorización de requests
             .authorizeHttpRequests(authz -> authz
-                .requestMatchers(
-                    "/api/auth/register",
-                    "/api/auth/login",
-                    "/api/auth/verify",
-                    "/api/auth/refresh",
-                    "/health"
-                ).permitAll()
+                // Endpoints públicos
+                .requestMatchers("/health").permitAll()
+                .requestMatchers("/api/auth/register").permitAll()
+                .requestMatchers("/api/auth/verify").permitAll()
+                .requestMatchers("/api/auth/login").permitAll()
+                .requestMatchers("/api/auth/login/check").permitAll()
+                .requestMatchers("/api/auth/login/authenticate").permitAll()
+                
+                // H2 Console (solo para desarrollo)
+                .requestMatchers("/h2-console/**").permitAll()
+                
+                // Todos los demás requieren autenticación
                 .anyRequest().authenticated()
             )
-            .oauth2ResourceServer(oauth2 -> oauth2
-                .jwt(jwt -> jwt.decoder(jwtDecoder()))
+            
+            // Sin sesiones (stateless)
+            .sessionManagement(session -> 
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            
+            // Configurar OAuth2 Resource Server con JWT
+            .oauth2ResourceServer(oauth2 -> 
+                oauth2.jwt(jwt -> jwt.decoder(jwtDecoder()))
             );
-        
+
         return http.build();
     }
-    
+
     @Bean
     public JwtDecoder jwtDecoder() {
         String jwkSetUri = String.format(
             "https://cognito-idp.%s.amazonaws.com/%s/.well-known/jwks.json",
-            region, userPoolId
+            region,
+            userPoolId
         );
         return NimbusJwtDecoder.withJwkSetUri(jwkSetUri).build();
     }
-    
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(false);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
